Fixed the bug with the contextmenu button and align it better

--- a/src/components/contextMenu/ContextMenu.css
+++ b/src/components/contextMenu/ContextMenu.css
@@ -1,7 +1,7 @@
 .context-menu {
   position: absolute;
   top: 0;
-  left: 92%;
+  left: 80%;
   background-color: var(--color-bg-2);
   border: 1px solid var(--color-border);
   padding: 0.5rem;
